@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT(mox, 2.0.1, mok@bioxray.dk)
+AC_INIT(mox, 2.0.2, mok@bioxray.au.dk)
 
 AC_CONFIG_SRCDIR([src/libatom.c])
 AC_CONFIG_AUX_DIR([config])
