@@ -16,6 +16,11 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
+/** @file veclib.c
+   @brief Routines to manipulate vectors and matrices 
+   @author Morten Kjeldgaard
+*/
+
 #include <stdio.h>
 #include <stdlib.h>
 #include <string.h>
